--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 		 e habilidade do usuário em diversas áreas da programação. Cada teste apresenta uma série de desafios e questões 
 		 que devem ser resolvidos utilizando uma ou mais linguagens de programação.</strong></p><br><br>
 		
-		<a href="/JavaScript/paginas/index.html" class="next-button">Iniciar Teste de JavaScript</a>
+		<a href="/JavaScript/index.html" class="next-button">Iniciar Teste de JavaScript</a>
 		<a href="/index.html" class="previous-button">Index</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
-	<script src="./script/script.js"></script>
+	<script src="/JavaScript/script/script.js"></script>
 </body>
 
 </html>
