--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Os códigos de referencia você encontra na W3Schools (https://www.w3schools.com/js/default.asp) -->
 <!-- Desenvolvido por: Marcelo M S Silva. Se gostou me siga la no linkedin -> https://www.linkedin.com/in/marcelo-m-s-silva/ -->
 <head>
-	<link rel="stylesheet" type="text/css" href="/JavaScript/style/style.css">
+	<link rel="stylesheet" type="text/css" href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/JavaScript/style/style.css">
 	<title>Questionário</title>
 	</head>
 
@@ -23,7 +23,7 @@
 		<a href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/index.html" class="previous-button">Index</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
-	<script src="/JavaScript/script/script.js"></script>
+	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/JavaScript/script/script.js"></script>
 </body>
 
 </html>
