--- a/JavaScript/paginas/Q02.html
+++ b/JavaScript/paginas/Q02.html
@@ -4,7 +4,7 @@
 <!-- Desenvolvido por: Marcelo M S Silva. Se gostou me siga la no linkedin -> https://www.linkedin.com/in/marcelo-m-s-silva/ -->
 <head>
 	<title>Questionário</title>
-	<link rel="stylesheet" type="text/css" href="/JavaScript/style/style.css">
+	<link rel="stylesheet" type="text/css" href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/JavaScript/style/style.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 		<a href="index.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
-	<script src="/JavaScript/script/script.js"></script>	
+	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>	
 </body>
 
 </html>
