--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		 e habilidade do usuário em diversas áreas da programação. Cada teste apresenta uma série de desafios e questões 
 		 que devem ser resolvidos utilizando uma ou mais linguagens de programação.</strong></p><br><br>
 		
-		<a href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/index.html" class="next-button">Iniciar Teste de JavaScript</a>
-		<a href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/index.html" class="previous-button">Index</a>
+		<a href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/paginas/index.html" class="next-button">Iniciar Teste de JavaScript</a>
+		<a href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao" class="previous-button">Index</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
