Correções no código

--- a/JavaScript/paginas/Q02.html
+++ b/JavaScript/paginas/Q02.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
         <div id="conteudo-title">
-            <h1 class="title">Modo de prática - JavaScript</h1>
+            <h1 class="title">Teste de Competências - JavaScript</h1>
         </div>
     </header>
 	<div class="container">
@@ -31,7 +31,7 @@
 		<a href="index.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
-	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>	
+	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
 </body>
 
 </html>
