--- a/JavaScript/paginas/Q03.html
+++ b/JavaScript/paginas/Q03.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<div id="conteudo-title">
-			<h1 class="title">Modo de prática - JavaScript</h1>
+			<h1 class="title">Teste de Competências - JavaScript</h1>
 		</div>
 	</header>
 	<div class="container">
