--- a/JavaScript/paginas/Q08.html
+++ b/JavaScript/paginas/Q08.html
@@ -5,13 +5,13 @@
 <!-- Desenvolvido por: Marcelo M S Silva. Se gostou me siga la no linkedin -> https://www.linkedin.com/in/marcelo-m-s-silva/ -->
 <head>
 	<title>Questionário</title>
-	<link rel="stylesheet" type="text/css" href="/JavaScript/style/style.css">
+	<link rel="stylesheet" type="text/css" href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/style/style.css">
 </head>
 
 <body>
 	<header>
         <div id="conteudo-title">
-            <h1 class="title">Modo de prática - JavaScript</h1>
+            <h1 class="title">Teste de Competências - JavaScript</h1>
         </div>
     </header>
 	<div class="container">
@@ -49,7 +49,7 @@
 		<a href="Q07.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
-	<script src="/JavaScript/script/script.js"></script>
+	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
 </body>
 
 </html>
