Novas Questões ADD

--- a/JavaScript/paginas/Q16.html
+++ b/JavaScript/paginas/Q16.html
@@ -20,11 +20,11 @@
 		<form id="quiz-form">
 		<input type="radio" name="rate" value="1"> self<br><br>
 		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="4"> target<br><br>
-		<input type="radio" name="rate" value="2"> source<br><br>
+		<input type="radio" name="rate" value="2"> target<br><br>
+		<input type="radio" name="rate" value="4"> source<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="index.html" class="next-button">Próxima página</a>
+		<a href="Q140.html" class="next-button">Próxima página</a>
 		<a href="Q15.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
