--- a/JavaScript/paginas/Q129.html
+++ b/JavaScript/paginas/Q129.html
@@ -4,8 +4,6 @@
 <!-- Os códigos de referencia você encontra na W3Schools (https://www.w3schools.com/js/default.asp) -->
 <!-- Desenvolvido por: Marcelo M S Silva. Se gostou me siga la no linkedin -> https://www.linkedin.com/in/marcelo-m-s-silva/ -->
 <head>
-	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Questionário</title>
 	<link rel="stylesheet" type="text/css" href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/style/style.css">
 </head>
@@ -18,16 +16,23 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q132. Qual destes avalia como verdadeiro?</strong></p><br>
+		<p><strong> Q129. O que esse código imprimirá no console?</strong><br><br>
+			const myFunc = (num1, num2 = 2, num3 = 2) => {<br>
+				return num1 + num2 + num3;<br>
+			  };<br>
+			  let values = [1, 5];<br>
+			  const test = myFunc(2, ...values);<br>
+			  console.log(test);<br>
+		</p><br>
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="3"> Boleano("")<br><br>
-		<input type="radio" name="rate" value="2"> Booleano("falso")<br><br>
-		<input type="radio" name="rate" value="4"> Booleano(0)<br><br>
-		<input type="radio" name="rate" value="1"> Booleano(NaN)<br><br>
+		<input type="radio" name="rate" value="2"> 8<br><br>
+		<input type="radio" name="rate" value="1"> 6<br><br>
+		<input type="radio" name="rate" value="4"> 12<br><br>
+		<input type="radio" name="rate" value="3"> 2<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q133.html" class="next-button">Próxima página</a>
-		<a href="Q131.html" class="previous-button">Página anterior</a>
+		<a href="Q130.html" class="next-button">Próxima página</a>
+		<a href="Q128.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
