--- a/JavaScript/paginas/Q126.html
+++ b/JavaScript/paginas/Q126.html
@@ -20,7 +20,7 @@
 		<p><strong> Q126. Qual é a saída desse código?</strong><br><br>
 			<span style="color:rgb(38, 0, 255)">var</span> cat = { name: <span style="color:rgb(38, 0, 255)">'Athena'</span> };<br>
 
-			<span style="color:rgb(38, 0, 255)">function</span> swap(feline) {<br>
+			<span style="color:rgb(38, 0, 255)">function</span> swap(<span style="color:rgb(38, 0, 255)">feline</span>) {<br>
 			feline.name = <span style="color:rgb(38, 0, 255)">'Wild'</span>;<br>
 			feline = { name: <span style="color:rgb(38, 0, 255)">'Tabby'</span>};<br>
 			}<br>
