--- a/JavaScript/paginas/Q119.html
+++ b/JavaScript/paginas/Q119.html
@@ -17,23 +17,18 @@
 	</header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q120. O que acontece quando você executa esse código?</strong><br><br>
-			if (true) {<br>
-				var x = 5;<br>
-				const y = 6;<br>
-				let z = 7;<br>
-			  }<br>
-			  console.log(x + y + z);<br>
+		<p><strong> Q119. Como você pode tentar acessar a propriedade a.bsem objlançar um erro se a for indefinido?</strong><br><br>
+			let obj = {};<br>
 			</p><br>
 		<form id="quiz-form">
-			<input type="radio" name="rate" value="1"> Ele vai lançar um ReferenceErrorcerca de x.<br><br>
-			<input type="radio" name="rate" value="3"> Ele irá imprimir 18.<br><br>
-			<input type="radio" name="rate" value="4"> [Ele irá imprimir undefined.<br><br>
-			<input type="radio" name="rate" value="2"> Ele vai lançar um ReferenceErrorcerca de y.<br><br>
+			<input type="radio" name="rate" value="1"> obj?.a.b<br><br>
+			<input type="radio" name="rate" value="2"> obj.a?.b<br><br>
+			<input type="radio" name="rate" value="4"> obj[a][b]<br><br>
+			<input type="radio" name="rate" value="3"> obj.?a.?b<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q121.html" class="next-button">Próxima página</a>
-		<a href="Q119.html" class="previous-button">Página anterior</a>
+		<a href="Q120.html" class="next-button">Próxima página</a>
+		<a href="Q16.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
