--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container">
 		<h1></h1><br>
 		<p><strong>Testes de conhecimentos e habilidades em programação, com o objetivo de avaliar o nível de conhecimento
-		 e habilidade do usuário em diversas áreas da programação. Cada teste apresenta uma série de desafios e questões 
+		 e habilidades do usuário em diversas áreas da programação. Cada teste apresenta uma série de desafios e questões 
 		 que devem ser resolvidos utilizando uma ou mais linguagens de programação.</strong></p><br><br>
 		
 		<a href="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/paginas/index.html" class="next-button">Iniciar Teste de JavaScript</a>
