--- a/JavaScript/paginas/Q21.html
+++ b/JavaScript/paginas/Q21.html
@@ -16,16 +16,16 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q16. Qual propriedade faz referência ao objeto DOM que despachou um evento?</strong></p><br>
+		<p><strong> Q21. Qual método Object retorna um iterável que pode ser usado para iterar sobre as propriedades de um objeto?</strong></p><br>
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="1"> self<br><br>
-		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="2"> target<br><br>
-		<input type="radio" name="rate" value="4"> source<br><br>
+		<input type="radio" name="rate" value="1"> Object.get()<br><br>
+		<input type="radio" name="rate" value="3"> Object.loop()<br><br>
+		<input type="radio" name="rate" value="4"> Object.each()<br><br>
+		<input type="radio" name="rate" value="2"> Object.keys()<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q120.html" class="next-button">Próxima página</a>
-		<a href="Q15.html" class="previous-button">Página anterior</a>
+		<a href="Q21.html" class="next-button">Próxima página</a>
+		<a href="Q20.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
