--- a/JavaScript/paginas/Q22.html
+++ b/JavaScript/paginas/Q22.html
@@ -16,16 +16,19 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q16. Qual propriedade faz referência ao objeto DOM que despachou um evento?</strong></p><br>
+		<p><strong> Q22. O que será registrado no console?</strong></p><br>
+		<span style="color:rgb(38, 0, 255)">var </span> a = ['dog', 'cat', 'hen'];<br>
+        a[100] = 'fox';<br>
+        console.<span style="color:rgb(255, 30, 0)">log </span>(a.length);<br><br>
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="1"> self<br><br>
-		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="2"> target<br><br>
-		<input type="radio" name="rate" value="4"> source<br><br>
+		<input type="radio" name="rate" value="2"> 101<br><br>
+		<input type="radio" name="rate" value="3"> 3<br><br>
+		<input type="radio" name="rate" value="1"> 4<br><br>
+		<input type="radio" name="rate" value="4"> 100<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q120.html" class="next-button">Próxima página</a>
-		<a href="Q15.html" class="previous-button">Página anterior</a>
+		<a href="Q23.html" class="next-button">Próxima página</a>
+		<a href="Q21.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
