--- a/JavaScript/paginas/Q23.html
+++ b/JavaScript/paginas/Q23.html
@@ -16,16 +16,16 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q16. Qual propriedade faz referência ao objeto DOM que despachou um evento?</strong></p><br>
+		<p><strong> Q23. Qual é a diferença entre coleções criadas com Map e coleções criadas com Object?</strong></p><br>
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="1"> self<br><br>
-		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="2"> target<br><br>
-		<input type="radio" name="rate" value="4"> source<br><br>
+		<input type="radio" name="rate" value="1"> Você pode iterar valores em um mapa em seu pedido de inserção.<br><br>
+		<input type="radio" name="rate" value="2"> Você pode contar os registros em um Mapa com uma única chamada de método.<br><br>
+		<input type="radio" name="rate" value="3"> As chaves no Maps podem ser strings.<br><br>
+		<input type="radio" name="rate" value="4"> Você pode acessar valores em um mapa sem iterar por toda a coleção.<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q120.html" class="next-button">Próxima página</a>
-		<a href="Q15.html" class="previous-button">Página anterior</a>
+		<a href="Q24.html" class="next-button">Próxima página</a>
+		<a href="Q22.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
