--- a/JavaScript/paginas/Q24.html
+++ b/JavaScript/paginas/Q24.html
@@ -16,16 +16,20 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q16. Qual propriedade faz referência ao objeto DOM que despachou um evento?</strong></p><br>
+		<p><strong> Q24. Qual é o valor de sobremesa.type após executar este código?</strong></p><br>
+
+		<span style="color:rgb(38, 0, 255)">const </span> dessert = { type: 'pie' };<br>
+        dessert.<span style="color:rgb(255, 30, 0)">type </span> = 'pudding';<br><br>
+
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="1"> self<br><br>
-		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="2"> target<br><br>
-		<input type="radio" name="rate" value="4"> source<br><br>
+		<input type="radio" name="rate" value="1"> torta<br><br>
+		<input type="radio" name="rate" value="3"> O código gerará um erro.<br><br>
+		<input type="radio" name="rate" value="2"> pudim<br><br>
+		<input type="radio" name="rate" value="4"> indefinido<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q120.html" class="next-button">Próxima página</a>
-		<a href="Q15.html" class="previous-button">Página anterior</a>
+		<a href="Q25.html" class="next-button">Próxima página</a>
+		<a href="Q23.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
