--- a/JavaScript/paginas/Q27.html
+++ b/JavaScript/paginas/Q27.html
@@ -16,16 +16,16 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q16. Qual propriedade faz referência ao objeto DOM que despachou um evento?</strong></p><br>
+		<p><strong> Q27. Qual instrução define o construtor Person como pai do construtor Student na cadeia de protótipos?</strong></p><br>
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="1"> self<br><br>
-		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="2"> target<br><br>
-		<input type="radio" name="rate" value="4"> source<br><br>
+		<input type="radio" name="rate" value="1"> Student.parent = Person;<br><br>
+		<input type="radio" name="rate" value="2"> Student.prototype = new Person();<br><br>
+		<input type="radio" name="rate" value="3"> Student.prototype = Person;<br><br>
+		<input type="radio" name="rate" value="4"> sourcStudent.prototype = Person();e<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q120.html" class="next-button">Próxima página</a>
-		<a href="Q15.html" class="previous-button">Página anterior</a>
+		<a href="Q28.html" class="next-button">Próxima página</a>
+		<a href="Q26.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
