--- a/JavaScript/paginas/Q28.html
+++ b/JavaScript/paginas/Q28.html
@@ -16,16 +16,16 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q16. Qual propriedade faz referência ao objeto DOM que despachou um evento?</strong></p><br>
+		<p><strong> Q28. Por que você incluiria uma instrução “use strict” em um arquivo JavaScript?</strong></p><br>
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="1"> self<br><br>
-		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="2"> target<br><br>
-		<input type="radio" name="rate" value="4"> source<br><br>
+		<input type="radio" name="rate" value="1"> para dizer aos analisadores para interpretarem sua sintaxe JavaScript livremente<br><br>
+		<input type="radio" name="rate" value="2"> para dizer aos analisadores para aplicar todas as regras de sintaxe JavaScript ao processar seu código<br><br>
+		<input type="radio" name="rate" value="3"> para instruir o navegador a corrigir automaticamente quaisquer erros encontrados no código<br><br>
+		<input type="radio" name="rate" value="4"> para habilitar recursos ES6 em seu código<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
-		<a href="Q120.html" class="next-button">Próxima página</a>
-		<a href="Q15.html" class="previous-button">Página anterior</a>
+		<a href="Q29.html" class="next-button">Próxima página</a>
+		<a href="Q27.html" class="previous-button">Página anterior</a>
 	</div>
 	<!-- Créditos: "© Marcelo M S Silva, Todos os direitos reservados. 21/04/2023". -->
 	<script src="/Teste-de-Conhecimentos-e-Habilidades-em-Programacao/JavaScript/script/script.js"></script>
