--- a/JavaScript/paginas/Q27.html
+++ b/JavaScript/paginas/Q27.html
@@ -15,6 +15,7 @@
         </div>
     </header>
 	<div class="container">
+		<h1>Questionário</h1><br>Q27. Qual instrução define o construtor Person como pai do construtor Student na cadeia de protótipos?<
 		<p><strong> /strong></p><br>
 		<form id="quiz-form">
 		<input type="radio" name="rate" value="1"> Student.parent = Person;<br><br>
