--- a/JavaScript/paginas/Q30.html
+++ b/JavaScript/paginas/Q30.html
@@ -16,12 +16,12 @@
     </header>
 	<div class="container">
 		<h1>Questionário</h1><br>
-		<p><strong> Q16. Qual propriedade faz referência ao objeto DOM que despachou um evento?</strong></p><br>
+		<p><strong> Q30. Qual dos seguintes valores não é um booleano falso?</strong></p><br>
 		<form id="quiz-form">
-		<input type="radio" name="rate" value="1"> self<br><br>
-		<input type="radio" name="rate" value="3"> object<br><br>
-		<input type="radio" name="rate" value="2"> target<br><br>
-		<input type="radio" name="rate" value="4"> source<br><br>
+		<input type="radio" name="rate" value="1"> Boolean(0)<br><br>
+		<input type="radio" name="rate" value="3"> Boolean("")<br><br>
+		<input type="radio" name="rate" value="4"> Boolean(NaN)<br><br>
+		<input type="radio" name="rate" value="2"> Boolean("false")<br><br>
 		</form>
 		<button onclick="checkAnswer()">Verificar resposta</button>
 		<a href="Q120.html" class="next-button">Próxima página</a>
